fix bug in about section

--- a/index.html
+++ b/index.html
@@ -48,30 +48,30 @@
                         Hello! 
                         <br/><br/>
                         I'm a recent EECS graduate from UC Berkeley
-                        <br class="superficial"/>interested in developing firmware for embedded systems.
+                        <br class="superficial"/>
+                        interested in both software and firmware development.
                         <br/><br/>
                         Contact: baptistajaden@gmail.com
                     </div>
                 </div>
                 <div id="summary">
-                    Throughout my studies I have focused on learning core concepts and 
-                    technologies including C/C++,
+                    I am currently searching for a full-time position where I can continue
+                    to develop my skillset 
                     <br class="superficial"/>
-                    GDB, CMake, Python, UART/SPI/I2C, Kicad, FreeRTOS, RISC-V/x86 assembly, formal analysis, and more.
+                    and grow as an engineer.
                     <br/><br/>
-                    I have worked on many projects that demonstrate my proficiency 
-                    in developing large systems,
-                    <br class="superficial"/>most notably a disassembler for the 
-                    MSP430 microcontroller, the implementation of various components
-                    <br/>
-                    of the Pintos educational operating system, and an encrypted file 
-                    system.
-                    <br/><br/>
-                    I am eager to begin my career developing embedded systems and put 
-                    the skills I have developed at
+                    I have worked on many projects that demonstrate my proficiency in developing
+                    large systems,<br class="superficial"/>
+                    most notably a disassembler for the MSP430 microcontroller,
+                    the implementation of various
                     <br class="superficial"/>
-                    UC Berkeley to work on production 
-                    systems.
+                    components of the Pintos educational
+                    operating system, and an encrypted file system.
+                    <br/><br/>
+                    I am eager to begin my career and contribute to real-world projects
+                    using the skills I have
+                    <br class="superficial"/>
+                    developed at UC Berkeley.
                 </div>
                 <div id="socials">
                     <a href="https://github.com/jdbaptista" target="_blank" class="social-link">
