center blog post text

--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
         </nav>
         <div id="nav-separator"></div>
         <div class="centered">
-            <section>
+            <section style="text-align:center">
                 There are currently no blog posts.
             </section>
         </div>
