fix issue with degree titles

--- a/resume.html
+++ b/resume.html
@@ -56,12 +56,13 @@
                     <div class="resume-item-left">
                         <span class="text-tiny">B.S:</span>
                         <span class="text-short">B.S</span>
-                        <span class="text-long">Bachelor of Science</span>
+                        <span class="text-long">Bachelor of Science in</span>
                         <span class="text-short text-long">in</span>
-                         Electrical Engineering 
-                         <span class="text-short text-tiny">&</span>
-                         <span class="text-long">and</span>
-                          Computer Science
+                        Electrical Engineering
+                        <span class="text-tiny">&</span>
+                        <span class="text-short">&</span>
+                        <span class="text-long">and</span>
+                        Computer Science
                     </div>
                     <div class="resume-item-right">
                         GPA: 3.83
@@ -88,11 +89,11 @@
                 <div class="resume-item">
                     <div class="resume-item-left">
                         <span class="text-tiny">A.S:</span>
-                        <span class="text-short">A.S</span>
-                        <span class="text-long">Associate of Science</span>
-                        <span class="text-short text-long">in</span>
+                        <span class="text-short">A.S in</span>
+                        <span class="text-long">Associate of Science in</span>
                         Computer Science
-                        <span class="text-short text-tiny">&</span>
+                        <span class="text-tiny">&</span>
+                        <span class="text-short">&</span>
                         <span class="text-long">and</span>
                         Mathematics
                     </div>
