add traffic project

--- a/projects.html
+++ b/projects.html
@@ -40,15 +40,24 @@
         <div id="nav-separator"></div>
         <div class="aside-grid">
             <div class="main-content">
-                <a href="https://github.com/jdbaptista/MSP-Debugger" target="_blank">
-                    <section id="msp-disassembler">
+                <a href="https://github.com/zinkwazi/traffic-pcb-sb" target="_blank" class="project-wrapper">
+                    <section id="traffic-pcb-sb" class="project">
+                        <div class="project-title">
+                            Live Traffic PCB
+                        </div>
+                        <img src="content/fullboardv1rev1.jpg"
+                            class="project-image"/>
+                     </section>
+                </a>
+                <a href="https://github.com/jdbaptista/MSP-Debugger" target="_blank" class="project-wrapper">
+                    <section id="msp-disassembler" class="project">
                         <div class="project-title">
                             MSP430 Disassembler
                         </div>
                         <img src="content/mspdisassembler.jpg"
                             class="project-image"/>
                      </section>
-                </a>          
+                </a>
             </div>
             <aside>
                 <div class="aside-header">
