add traffic pcb to resume

--- a/resume.html
+++ b/resume.html
@@ -249,6 +249,50 @@
                 </div>
                 <div class="resume-item">
                     <div class="resume-item-left">
+                        <a href="https://github.com/zinkwazi/traffic-pcb-sb" target="_blank">
+                            Live Traffic PCB
+                        </a>
+                    </div>
+                    <div class="resume-item-right">
+                        Aug 2024 - Present
+                    </div>
+                </div>
+                <div class="resume-item">
+                    <div class="resume-item-left"></div>
+                    <div class="resume-item-right">
+                        Collaborative Project
+                    </div>
+                </div>
+                <div class="resume-item">
+                    <ul class="resume-list">
+                        <li>
+                            Led firmware development for an ESP32 and assisted with circuit 
+                            design on a PCB that displays real-time traffic conditions of
+                            nearly 650 road segments in the greater Los Angeles area.
+                        </li>
+                        <li>
+                            Successfully utilized ESP-IDF documentation to implement 
+                            OTA updates, establish HTTPS connections to 
+                            <a href="https://developer.tomtom.com/">TomTom</a>'s traffic API,
+                            and enable non-volatile storage of user data.
+                        </li>
+                        <li>
+                            Managed various FreeRTOS tasks by configuring task priorities and using semaphores, 
+                            task notifications, queues, and event groups to synchronize resource usage and error states.
+                        </li>
+                        <li>
+                            Handled memory constraints by optimizing task stack usage and developing an efficient
+                            data structure to hold LED to road segment 
+                        </li>
+                        <li>
+                            Synchronized I2C commands to three LED matrix drivers through
+                            the use of a gatekeeper task, controlling a total of 326 RGB LEDs.
+                        </li>
+                    </ul>
+                </div>
+                <br/>
+                <div class="resume-item">
+                    <div class="resume-item-left">
                         <a href="https://github.com/jdbaptista/MSP-Debugger" target="_blank">
                             MSP430 Disassembler
                         </a>
