--- a/resume.html
+++ b/resume.html
@@ -282,7 +282,7 @@
                         </li>
                         <li>
                             Handled memory constraints by optimizing task stack usage and developing an efficient
-                            data structure to hold LED to road segment 
+                            data structure to hold LED to road segment mappings.
                         </li>
                         <li>
                             Synchronized I2C commands to three LED matrix drivers through
