add post framework and post1

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
     <head>
         <title>Jaden Baptista</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="styles/style.css" />
-        <link rel="stylesheet" href="styles/index.css" />
+        <link rel="stylesheet" href="/styles/style.css" />
+        <link rel="stylesheet" href="/styles/index.css" />
         <link rel="stylesheet" 
-              href="styles/small-style.css" />
+              href="/styles/small-style.css" />
         <link rel="stylesheet"
-              href="styles/mobile-style.css" />
+              href="/styles/mobile-style.css" />
         <link rel="stylesheet"
-              href="styles/smaller-style.css" />
+              href="/styles/smaller-style.css" />
         <link rel="stylesheet"
-              href="styles/smallest-style.css" />
+              href="/styles/smallest-style.css" />
         </head>
 
     <body>
@@ -22,15 +22,15 @@
             </div>
             <div id="nav-buttons">
                 <button class="unlinked-nav-button">About</button>
-                <a class="nav-link" href="resume.html"><button class="nav-button">Resume</button></a>
-                <a class="nav-link" href="projects.html"><button class="nav-button">Projects</button></a>
-                <a class="nav-link" href="blog.html"><button class="nav-button">Blog</button></a>
+                <a class="nav-link" href="/pages/resume.html"><button class="nav-button">Resume</button></a>
+                <a class="nav-link" href="/pages/projects.html"><button class="nav-button">Projects</button></a>
+                <a class="nav-link" href="/pages/blog.html"><button class="nav-button">Blog</button></a>
                 <button class="unlinked-nav-button"
                         id="dark-mode-button"
                         data-state="light"
                         onclick="toggleDarkMode();">
                     <img id="dark-mode-button-img" 
-                         src="content/weather-moon-full-svgrepo-com.svg" 
+                         src="/content/weather-moon-full-svgrepo-com.svg" 
                          alt="dark mode toggle"
                          width="50px"
                          height="30px">
@@ -42,7 +42,7 @@
         <div class="centered">
             <section id="introduction">
                 <div id="hello-container">
-                    <img src="content/picture.jpg" alt="face image"
+                    <img src="/content/picture.jpg" alt="face image"
                     id="face-image"/>
                     <div id="hello">
                         Hello! 
@@ -75,11 +75,11 @@
                 </div>
                 <div id="socials">
                     <a href="https://github.com/jdbaptista" target="_blank" class="social-link">
-                        <img src="content/github-mark.svg" alt="github link" class="github-img"
+                        <img src="/content/github-mark.svg" alt="github link" class="github-img"
                             height="40px"/>
                     </a>
                     <a href="https://www.linkedin.com/in/baptistajaden/" target="_blank" class="social-link">
-                        <img src="content/LI-In-Bug.png" alt="linkedin link" class="linkedin-img"
+                        <img src="/content/LI-In-Bug.png" alt="linkedin link" class="linkedin-img"
                             height="40px"/>
                     </a>
                 </div>
@@ -94,12 +94,12 @@
                     Recent Blog Posts
                 </div>
                 <div class="aside-content">
-                    No current blog posts.
                 </div>
             </aside>
         </div>
     </body>
 
-    <script src="scripts/darkMode.js"></script>
-    <script src="scripts/navbarTransition.js"></script>
+    <script src="/scripts/darkMode.js"></script>
+    <script src="/scripts/navbarTransition.js"></script>
+    <script src="/scripts/blogTitles.js"></script>
 </html>
