--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,16 +3,16 @@
     <head>
         <title>Jaden Baptista</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="styles/style.css" />
-        <link rel="stylesheet" href="styles/projects.css" />
+        <link rel="stylesheet" href="/styles/style.css" />
+        <link rel="stylesheet" href="/styles/projects.css" />
         <link rel="stylesheet" 
-              href="styles/small-style.css" />
+              href="/styles/small-style.css" />
         <link rel="stylesheet"
-              href="styles/mobile-style.css" />
+              href="/styles/mobile-style.css" />
         <link rel="stylesheet"
-              href="styles/smaller-style.css" />
+              href="/styles/smaller-style.css" />
         <link rel="stylesheet"
-              href="styles/smallest-style.css" />
+              href="/styles/smallest-style.css" />
     </head>
     <body>
         <nav>
@@ -20,16 +20,16 @@
                 Jaden Baptista
             </div>
             <div id="nav-buttons">
-                <a class="nav-link" href="index.html"><button class="nav-button">About</button></a>
-                <a class="nav-link" href="resume.html"><button class="nav-button">Resume</button></a>
+                <a class="nav-link" href="/index.html"><button class="nav-button">About</button></a>
+                <a class="nav-link" href="/pages/resume.html"><button class="nav-button">Resume</button></a>
                 <button class="unlinked-nav-button">Projects</button>
-                <a class="nav-link" href="blog.html"><button class="nav-button">Blog</button></a>
+                <a class="nav-link" href="/pages/blog.html"><button class="nav-button">Blog</button></a>
                 <button class="unlinked-nav-button"
                         id="dark-mode-button"
                         data-state="light"
                         onclick="toggleDarkMode();">
                     <img id="dark-mode-button-img" 
-                         src="content/weather-moon-full-svgrepo-com.svg" 
+                         src="/content/weather-moon-full-svgrepo-com.svg" 
                          alt="dark mode toggle"
                          width="50px"
                          height="30px">
@@ -45,7 +45,7 @@
                         <div class="project-title">
                             Live Traffic PCB
                         </div>
-                        <img src="content/fullboardv1rev1.jpg"
+                        <img src="/content/fullboardv1rev1.jpg"
                             class="project-image"/>
                      </section>
                 </a>
@@ -54,7 +54,7 @@
                         <div class="project-title">
                             MSP430 Disassembler
                         </div>
-                        <img src="content/mspdisassembler.jpg"
+                        <img src="/content/mspdisassembler.jpg"
                             class="project-image"/>
                      </section>
                 </a>
@@ -70,6 +70,6 @@
         </div>
     </body>
 
-    <script src="scripts/darkMode.js"></script>
-    <script src="scripts/navbarTransition.js"></script>
+    <script src="/scripts/darkMode.js"></script>
+    <script src="/scripts/navbarTransition.js"></script>
 </html>
