bug and typo fixes

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -64,7 +64,6 @@
                     Recent Blog Posts
                 </div>
                 <div class="aside-content">
-                    No current blog posts.
                 </div>
             </aside>
         </div>
@@ -72,4 +71,5 @@
 
     <script src="/scripts/darkMode.js"></script>
     <script src="/scripts/navbarTransition.js"></script>
+    <script src="/scripts/blogTitles.js"></script>
 </html>
