update resume & mission statement

--- a/index.html
+++ b/index.html
@@ -49,29 +49,28 @@
                         <br/><br/>
                         I'm a recent EECS graduate from UC Berkeley
                         <br class="superficial"/>
-                        interested in both software and firmware development.
+                        based in Santa Barbara and interested in
+                        <br class="superficial"/>
+                        firmware development.
                         <br/><br/>
                         Contact: baptistajaden@gmail.com
                     </div>
                 </div>
                 <div id="summary">
-                    I am currently searching for a full-time position where I can continue
-                    to develop my skillset 
+                    I am currently searching for a full-time position where I can put my skillset
                     <br class="superficial"/>
-                    and grow as an engineer.
+                    to use creating impactful technology.
                     <br/><br/>
-                    I have worked on many projects that demonstrate my proficiency in developing
-                    large systems,<br class="superficial"/>
-                    most notably a disassembler for the MSP430 microcontroller,
-                    the implementation of various
+
+                    While I search, I have been working part-time at Outside Open to develop a
                     <br class="superficial"/>
-                    components of the Pintos educational
-                    operating system, and an encrypted file system.
-                    <br/><br/>
-                    I am eager to begin my career and contribute to real-world projects
-                    using the skills I have
+                    decorative display of real-time traffic conditions in the greater Los Angeles
                     <br class="superficial"/>
-                    developed at UC Berkeley.
+                    area. Please see the projects page for more information and feel free to 
+                    <br class="superficial"/>
+                    contact me with any questions about the firmware, hardware, or obtaining 
+                    <br class="superficial"/>
+                    a prototype!
                 </div>
                 <div id="socials">
                     <a href="https://github.com/jdbaptista" target="_blank" class="social-link">
