fix grammatical error

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     to use creating impactful technology.
                     <br/><br/>
 
-                    While I search, I have been working part-time at Outside Open to develop a
+                    While searching, I have been working part-time at Outside Open to develop a
                     <br class="superficial"/>
                     decorative display of real-time traffic conditions in the greater Los Angeles
                     <br class="superficial"/>
