create post3 and fix resume spacing

--- a/index.html
+++ b/index.html
@@ -47,30 +47,25 @@
                     <div id="hello">
                         Hello! 
                         <br/><br/>
-                        I'm a recent EECS graduate from UC Berkeley
+                        I am a Firmware Engineer 
                         <br class="superficial"/>
-                        based in Santa Barbara and interested in
-                        <br class="superficial"/>
-                        firmware development.
+                        based in Santa Barbara.
                         <br/><br/>
                         Contact: baptistajaden@gmail.com
                     </div>
                 </div>
                 <div id="summary">
-                    I am currently searching for a full-time position where I can put my skillset
+                    I am an alumni of both SBCC and UC Berkeley and have recently been
                     <br class="superficial"/>
-                    to use creating impactful technology.
-                    <br/><br/>
-
-                    While searching, I have been working part-time at Outside Open to develop a
+                    working part-time at Outside Open to develop a decorative display of
                     <br class="superficial"/>
-                    decorative display of real-time traffic conditions in the greater Los Angeles
+                    real-time traffic conditions in the greater Los Angeles area. On this site
                     <br class="superficial"/>
-                    area. Please see the projects page for more information and feel free to 
+                    you can find information about my projects, an overview of my background,
                     <br class="superficial"/>
-                    contact me with any questions about the firmware, hardware, or obtaining 
+                    and articles containing helpful programming tips. Feel free to contact me
                     <br class="superficial"/>
-                    a prototype!
+                    with any questions or if would like my help with something!
                 </div>
                 <div id="socials">
                     <a href="https://github.com/jdbaptista" target="_blank" class="social-link">
