--- a/pages/resume.html
+++ b/pages/resume.html
@@ -78,6 +78,7 @@
                     <a href="https://people.eecs.berkeley.edu/~jrs/189/" target="_blank">Machine Learning</a>.
                 </div>
                 <br/>
+                <ul class="resume-list"></ul> <!-- this is for a 30px margin -->
                 <div class="resume-item">
                     <div class="resume-item-left">
                         Santa Barbara City College
@@ -119,6 +120,7 @@
                     Python,
                     FreeRTOS,
                     ESP-IDF,
+                    CMock,
                     Assembly.
                 </div>
                 <br/>
