update about and resume

--- a/index.html
+++ b/index.html
@@ -47,25 +47,21 @@
                     <div id="hello">
                         Hello! 
                         <br/><br/>
-                        I am a Firmware Engineer 
+                        I am a Firmware Engineer
                         <br class="superficial"/>
-                        based in Santa Barbara.
+                        based in Oxnard, CA.
                         <br/><br/>
                         Contact: baptistajaden@gmail.com
                     </div>
                 </div>
                 <div id="summary">
-                    I am an alumni of both SBCC and UC Berkeley and have recently been
+                    I have experience developing for ESP32s and STM32s using C, FreeRTOS,
                     <br class="superficial"/>
-                    working part-time at Outside Open to develop a decorative display of
+                    CMock, and Unity. On this site you can find information about my projects, 
                     <br class="superficial"/>
-                    real-time traffic conditions in the greater Los Angeles area. On this site
+                    an overview of my background, and articles containing programming tips.
                     <br class="superficial"/>
-                    you can find information about my projects, an overview of my background,
-                    <br class="superficial"/>
-                    and articles containing helpful programming tips. Feel free to contact me
-                    <br class="superficial"/>
-                    with any questions or if would like my help with something!
+                    Feel free to contact me if you would like help with anything firmware related!
                 </div>
                 <div id="socials">
                     <a href="https://github.com/jdbaptista" target="_blank" class="social-link">
