--- a/pages/resume.html
+++ b/pages/resume.html
@@ -132,8 +132,8 @@
                     I2C,
                     SPI,
                     JTAG,
-                    MSP430,
-                    ESP32.
+                    STM32,
+                    ESP32,
                 </div>
             </section>
             <section class="resume-container">
@@ -142,10 +142,29 @@
                 </div>
                 <div class="resume-item">
                     <div class="resume-item-left">
+                        Haas Automation
+                    </div>
+                    <div class="resume-item-right">
+                        June 2025 — Present
+                    </div>
+                </div>
+                <div class="resume-item">
+                    Electrical Engineer 1
+                </div>
+                <div class="resume-item">
+                    <ul class="resume-list">
+                        <li>
+                            Developing firmware for STM32s.
+                        </li>
+                    </ul>
+                </div>
+                <br/>
+                <div class="resume-item">
+                    <div class="resume-item-left">
                         Outside Open
                     </div>
                     <div class="resume-item-right">
-                        Dec 2024 — Present
+                        Dec 2024 — June 2025
                     </div>
                 </div>
                 <div class="resume-item">
@@ -159,26 +178,22 @@
                             area using over 400 SMD LEDs on an exposed PCB.
                         </li>
                         <li>
-                            Leading firmware development for an ESP32 using Espressif's SDK, ESP-IDF.
+                            Designed and implemented firmware for an ESP32 using ESP-IDF and FreeRTOS.
                         </li>
                         <li>
-                            Revising hardware using Kicad and exporting gerber files and BOMs for production.
+                            Utilized FreeRTOS tasks through the use of synchronization primitives such as mutexes and queues.
                         </li>
                         <li>
-                            Writing a HAL to synchronize and abstract I2C interaction to four LED matrix drivers.
+                            Actively managed OTA updates and supported multiple firmware and hardware versions.
                         </li>
                         <li>
-                            Utilizing FreeRTOS tasks through the use of synchronization primitives such as mutexes.
+                            Removed the need for dynamic memory allocation when parsing HTTPS responses with a custom circular buffer.
                         </li>
                         <li>
-                            Managing OTA updates and supporting multiple firmware and hardware versions.
+                            Developed manual and unit tests using Unity and CMock to verify correct hardware and firmware behavior.
                         </li>
                         <li>
-                            Developing manual and unit tests to verify correct hardware and firmware behavior.
-                        </li>
-                        <li>
-                            Implementing data structures such as a circular buffer,
-                            which removed the need for dynamic memory allocation when parsing HTTPS responses.
+                            Revised hardware using Kicad and exported gerber files and BOMs for production.
                         </li>
                     </ul>
                 </div>
