--- a/pages/resume.html
+++ b/pages/resume.html
@@ -133,7 +133,7 @@
                     SPI,
                     JTAG,
                     STM32,
-                    ESP32,
+                    ESP32.
                 </div>
             </section>
             <section class="resume-container">
